fixed project cards so on hover all description is visible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -722,6 +722,9 @@ body {
 .land-parameters .land-area__text::before {
   content: "Điện tích: \00a0"; }
 
+.land-parameters .land-area__text::after {
+  content: " m\00B2"; }
+
 .land-parameters .land-height {
   display: inline-block; }
   .land-parameters .land-height__icon {
@@ -752,6 +755,8 @@ body {
     transform: translate(0em, 0.05em); }
   .land-parameters .land-price__text::before {
     content: "Giá: \00a0"; }
+  .land-parameters .land-price__text::after {
+    content: " tỷ"; }
 
 .project-card {
   border-radius: 8px;
@@ -762,7 +767,7 @@ body {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 70%;
+    height: 90%;
     transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1) 0s; }
     .project-card__image img {
       width: 100%;
@@ -772,36 +777,25 @@ body {
   .project-card__description {
     position: absolute;
     bottom: 0;
-    height: 30%;
+    height: 5.6rem;
     transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
     background-color: #FFFEFF;
-    padding: 7% 4% 7% 4%;
+    padding: 2.2rem 2.7rem;
     cursor: pointer; }
   .project-card__name {
-    margin-bottom: .8rem;
+    margin-bottom: 1.2rem;
     margin-left: -.1rem; }
   .project-card__note {
     margin-bottom: .8rem; }
-  .project-card .land-parameters {
-    width: 80%;
-    margin-left: 2rem; }
-    .project-card .land-parameters > div:not(:last-child) {
-      margin-bottom: 0.3em; }
-    .project-card .land-parameters .land-price {
-      font-size: 1.3em;
-      position: absolute;
-      left: 50%;
-      bottom: 8%;
-      transform: translateX(-50%);
-      opacity: 0;
-      transition: opacity .2s .3s; }
+  .project-card__parameters {
+    margin-left: 1.9rem; }
+    .project-card__parameters > div:not(:last-child) {
+      margin-bottom: .4rem; }
   .project-card:hover .project-card__image {
-    height: 40%; }
+    height: 60%; }
   .project-card:hover .project-card__description {
-    height: 70%;
+    height: 16rem;
     cursor: pointer; }
-  .project-card:hover .land-parameters .land-price {
-    opacity: 1; }
 
 .search-card {
   background-color: #FFFEFF;
@@ -1268,7 +1262,7 @@ body {
 .projects__cards {
   height: 70vh;
   padding-bottom: 3vh;
-  margin-bottom: 5vh; }
+  margin-bottom: 6vh; }
 
 .about-company {
   height: calc(100vh - 6.5rem);
